# trading-agent

./: .env.example  .gitignore  .graphifyignore  MAPPA_PROGETTO.md  README.md  config.toml  nginx-tradingagents.conf  pyproject.toml
.streamlit/: config.toml
graphify-out/: .graphify_labels.json  .graphify_old.json  .graphify_python  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-07/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-10/: .graphify_analysis.json  graph.json
graphify-out/cache/: stat-index.json
reports/MONC.MI_20260526_162528/: complete_report.md  complete_report_it.md
reports/NVDA_20260522_154253/: complete_report.md
scripts/: run_dashboard.py  trading-agent-dashboard.service
tests/: test_app.py  test_backtest_scheduler.py  test_backtesting.py  test_backtesting_vbt.py  test_benchmark.py  test_brain.py  test_broker.py  test_capabilities.py  test_config.py  test_costs.py  test_daemon.py  test_data_ingestion.py  test_director_parallel.py  test_disinvest.py  test_domain_state.py  test_fundamentals.py  test_ibkr.py  test_indicators.py  test_macro.py  test_mantainer.py  test_news.py  test_options.py  test_orchestration.py  test_pipeline_e2e.py  test_risk_engine.py  test_social.py  test_storage.py  test_tools.py  test_trade_execution.py  test_universe.py  test_universe_sync.py
tradingagents/: __init__.py  app.py  benchmark.py  cli.py  config.py  daemon.py  default_config.py  performance.py
tradingagents/backtesting/: __init__.py  engine.py  engine_vbt.py  scheduler.py
tradingagents/brain/: __init__.py  agent_context.py  context.py  datapizza_director.py  datapizza_llm.py  (+9 more)
(+110 files in other folders)
